add checker, and better error output